--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --open --mode development --config config/webpack.config.js",
     "test": "jest --config config/jest.config.js",
+    "test:watch": "jest --watch --config config/jest.config.js",
     "build": "webpack --mode production --config config/webpack.config.js"
   },
   "keywords": [
@@ -32,6 +33,8 @@
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
