Implementation of middleware validating a racer to add

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --open --mode development --config config/webpack.config.js",
     "test": "jest --config config/jest.config.js",
     "test:watch": "jest --watch --config config/jest.config.js",
+    "test:coverage": "jest --coverage --config config/jest.config.js",
     "build": "webpack --mode production --config config/webpack.config.js"
   },
   "keywords": [
