--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Thomas Briois",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
