--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
     "postcss-loader": "^3.0.0",
+    "postcss-nesting": "^7.0.1",
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.4.6",
     "webpack": "^4.43.0",
