--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "html-webpack-plugin": "^4.4.1",
     "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.11.2",
+    "postcss-extend-rule": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-nesting": "^7.0.1",
     "tailwindcss": "^1.8.9",
