--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
+    "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6"
   },
